--- a/style.css
+++ b/style.css
@@ -308,3 +308,45 @@ footer {
   background-color: #f5f5f5;
   color: #0F0F0F;
 }
+
+@media (max-width: 1024px) {
+  #about h2 {
+    font-size: 28px;
+    padding-left: 2em;
+  }
+
+  #about p {
+    font-size: 18px;
+    padding-left: 2em;
+    padding-right: 2em;
+  }
+
+  .about-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+    padding: 2em;
+    text-align: center;
+  }
+
+  .about-photo-wrapper {
+    position: relative;
+    top: unset;
+    left: unset;
+    transform: none;
+    width: 50vw;
+    max-width: 300px;
+    margin: 0 auto;
+    z-index: 1;
+  }
+
+  .about-photo-wrapper::after {
+    bottom: 0;
+  }
+
+  .about-photo {
+    width: 100%;
+    height: auto;
+  }
+}
+
