--- a/style.css
+++ b/style.css
@@ -133,14 +133,15 @@ header nav ul li a {
 #about h2 {
   font-size: 36px;
   margin-bottom: 20px;
-  padding-left: 5em;
+  padding-left: 4em;
 }
 
 #about p {
   font-size: 21px;
   line-height: 1.6;
-  max-width: 760px;
-  padding-left: 9em;
+  max-width: 500px;
+  max-height: 500px;
+  padding-left: 8em;
 }
 
 /* Foto */
@@ -186,7 +187,7 @@ padding: 1em 0em;
 text-align: left;
 font-size: 36px;
 margin-bottom: 0px;
-padding-left: 5em;
+padding-left: 4em;
 }
 
 #projects p {
