--- a/style.css
+++ b/style.css
@@ -93,8 +93,7 @@ header nav ul li a {
   text-align: center;
 }
 
-.svg-background,
-.svg-foreground {
+.svg-background {
   position: absolute;
   top: 0;
   left: 0;
@@ -105,7 +104,18 @@ header nav ul li a {
   pointer-events: none; /* supaya tidak mengganggu klik */
 }
 
-.svg-foreground {
+.svg-background-aboutme,
+.svg-foreground-aboutme {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Biar svg tetap di tengah, hanya bagian luar yang terpotong */
+  z-index: 0; /* background lebih rendah */
+  pointer-events: none; /* supaya tidak mengganggu klik */
+}
+.svg-foreground-aboutme {
   z-index: 3; /* di atas text dan foto */
 }
 
@@ -325,13 +335,15 @@ footer {
 }
 
 @media (max-width: 1024px) {
+
   #about h2 {
-    font-size: 28px;
+    font-size: 20px;
     padding-left: 2em;
+    padding-top: 3em;
   }
 
   #about p {
-    font-size: 18px;
+    font-size: 15px;
     padding-left: 2em;
     padding-right: 2em;
   }
@@ -346,7 +358,7 @@ footer {
 
   .about-photo-wrapper {
     position: relative;
-    top: unset;
+    top: 1em;
     left: unset;
     transform: none;
     width: 50vw;
@@ -362,5 +374,27 @@ footer {
   .about-photo {
     width: 100%;
     height: auto;
+  }
+  .svg-background-aboutme {
+    top: 0px;
+    width: 91%;
+    height: 100%;
+    object-position: center top;
+  }
+
+  .svg-foreground-aboutme {
+    top: 0px;
+    width: 91%;
+    height: 100%;
+    object-position: center top;
+  }
+
+  #projects h2 {
+    text-align: left;
+  }
+
+  #projects p {
+    font-size: 17px;
+
   }
 }
